--- a/gradle.properties
+++ b/gradle.properties
@@ -5,9 +5,9 @@ minecraft_version=1.20.1
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
-minecraft_version_range=[1.20.1,1.21)
+minecraft_version_range=[1.20.1,1.20.2)
 # The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=47.4.4
+forge_version=47.4.0
 # The Forge version range can use any version of Forge as bounds or match the loader version range
 forge_version_range=[47,)
 # The loader version range can only use the major version of Forge/FML as bounds
@@ -32,13 +32,13 @@ mapping_channel=official
 mapping_version=1.20.1
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=etched_extras
+mod_id=etched_extension
 # The human-readable display name for the mod.
-mod_name=etched-extras
+mod_name=etched-extension
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.0-SNAPSHOT
+mod_version=0.1.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
