--- a/settings.gradle
+++ b/settings.gradle
@@ -6,10 +6,13 @@ pluginManagement {
             url = 'https://maven.minecraftforge.net/'
         }
     }
+    plugins {
+        id 'org.jetbrains.kotlin.jvm' version '2.0.21'
+    }
 }
 
 plugins {
     id 'org.gradle.toolchains.foojay-resolver-convention' version '0.7.0'
 }
 
-rootProject.name = 'etched-extras'
+rootProject.name = 'etched-extension'
