--- a/src/main/templates/META-INF/neoforge.mods.toml
+++ b/src/main/templates/META-INF/neoforge.mods.toml
@@ -1,4 +1,4 @@
-modLoader = "javafml"
+modLoader = "kotlinforforge"
 loaderVersion = "${loader_version_range}"
 license = "${mod_license}"
 
@@ -7,33 +7,32 @@ modId = "${mod_id}"
 version = "${mod_version}"
 displayName = "${mod_name}"
 authors = "${mod_authors}"
-displayTest = "MATCH_VERSION"
 description = '''${mod_description}'''
 
 [[dependencies."${mod_id}"]]
-modId = "forge"
-mandatory = true
-versionRange = "${forge_version_range}"
+modId = "neoforge"
+type = "required"
+versionRange = "${neo_version_range}"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies."${mod_id}"]]
 modId = "minecraft"
-mandatory = true
+type = "required"
 versionRange = "${minecraft_version_range}"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies."${mod_id}"]]
 modId = "kotlinforforge"
-mandatory = true
-versionRange = "*"
+type = "required"
+versionRange = "[5.3,)"
 ordering = "AFTER"
 side = "BOTH"
 
 [[dependencies."${mod_id}"]]
 modId = "etched"
-mandatory = true
-versionRange = "[3.0.4,3.1.0)"
+type = "required"
+versionRange = "[4.0.0,)"
 ordering = "AFTER"
 side = "BOTH"
