:sparkles: add logos and Catalogue support

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,6 +9,10 @@ displayName = "${mod_name}"
 authors = "${mod_authors}"
 displayTest = "MATCH_VERSION"
 description = '''${mod_description}'''
+logoFile="logo.png"
+
+[modproperties.betterwitchhuts]
+    catalogueImageIcon="catalogue_icon.png"
 
 [[dependencies."${mod_id}"]]
 modId = "forge"
