:twisted_rightwards_arrows: sync 1.20.1

--- a/src/main/templates/META-INF/neoforge.mods.toml
+++ b/src/main/templates/META-INF/neoforge.mods.toml
@@ -8,6 +8,10 @@ version = "${mod_version}"
 displayName = "${mod_name}"
 authors = "${mod_authors}"
 description = '''${mod_description}'''
+logoFile="logo.png"
+
+[modproperties.betterwitchhuts]
+catalogueImageIcon="catalogue_icon.png"
 
 [[dependencies."${mod_id}"]]
 modId = "neoforge"
