--- a/gradle.properties
+++ b/gradle.properties
@@ -37,4 +37,4 @@ mod_group_id=top.xiyang6666
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=XiYang6666
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=
+mod_description=Adds Meting-api and NetEase Cloud Music share link support to Etched.
