--- a/gradle.properties
+++ b/gradle.properties
@@ -38,7 +38,7 @@ mod_name=etched-extension
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=0.1.4
+mod_version=0.1.5
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -46,4 +46,4 @@ mod_group_id=top.xiyang6666
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=XiYang6666
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=
+mod_description=Adds Meting-api and NetEase Cloud Music share link support to Etched.
