--- a/settings.gradle
+++ b/settings.gradle
@@ -2,10 +2,15 @@ pluginManagement {
     repositories {
         mavenLocal()
         gradlePluginPortal()
-        maven { url = 'https://maven.neoforged.net/releases' }
+        maven {
+            name = "NeoForged"
+            url = 'https://maven.neoforged.net/releases'
+        }
     }
 }
 
 plugins {
     id 'org.gradle.toolchains.foojay-resolver-convention' version '0.8.0'
 }
+
+rootProject.name = 'etched-extension'
