--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+    }
+}
+
 plugins {
     id 'java-library'
     id 'idea'
@@ -5,6 +15,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version "2.0.21"
 }
 
+apply plugin: 'org.spongepowered.mixin'
 
 group = mod_group_id
 version = mod_version
@@ -27,6 +38,14 @@ dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
     implementation 'thedarkcolour:kotlinforforge:4.10.0'
     implementation name: "etched-3.0.4"
+}
+
+// mixin
+
+mixin {
+    add sourceSets.main, "${mod_id}.refmap.json"
+
+    config "${mod_id}.mixins.json"
 }
 
 // 语言
@@ -107,7 +126,9 @@ tasks.named('processResources', ProcessResources).configure {
                              mod_authors         : mod_authors, mod_description: mod_description,]
 
     inputs.properties replaceProperties
-    expand replaceProperties
+    filesMatching("**/*.toml") {
+        expand replaceProperties
+    }
     from "src/main/templates"
     into "build/generated/sources/modMetadata"
 }
