--- a/.github/workflows/dependency.yml
+++ b/.github/workflows/dependency.yml
@@ -1,27 +1,21 @@
-name: Java CI with Gradle
-
 on:
   push:
     branches: [ "1.20.1" ]
   workflow_dispatch:
 
 jobs:
-  build:
+  dependency-submission:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
 
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
 
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4.4.2
-
-      - name: Build with Gradle Wrapper
-        run: ./gradlew build
+      - name: Generate and submit dependency graph
+        uses: gradle/actions/dependency-submission@v4.4.2
