--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,3 +25,9 @@ jobs:
 
       - name: Build with Gradle Wrapper
         run: ./gradlew build
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: etched_extension-neoforge-dev+mc1.21.1.jar
+          path: build/libs/*.jar
